# Spotify-Playlist-To-CSV

./: .gitignore  README.md  pyproject.toml
src/spotify2csv/: __main__.py
src/spotify2csv/web_scraper/: api_scraper.py  page_scraper.py  pipeline.py
