[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify2csv"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "bs4>=0.0.2",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "playwright>=1.50.0",
    "pandas>=2.2.3"
]
requires-python = ">=3"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spotify2csv = "spotify2csv.__main__:main"